# alpha-signal-generator

./: README.md  pyproject.toml
samples/: btcusdt_book_metrics.jsonl  btcusdt_candles_with_indicators.jsonl
src/alpha_signal_generator/: __init__.py  __main__.py  base.py  engine.py  ingest.py  models.py  pipeline.py  protocols.py  registry.py
src/alpha_signal_generator/strategies/: __init__.py  book_imbalance.py  macd_crossover.py  rsi_mean_reversion.py
tests/: test_book_strategy.py  test_engine.py  test_macd_strategy.py  test_models.py  test_registry.py  test_rsi_strategy.py
