[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alpha-signal-generator"
version = "0.1.0"
description = "Pluggable strategy engine that emits strict entry and exit signals from market data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "juanmmm21" }]
keywords = ["trading", "signals", "strategy", "alpha", "quant", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
alpha-signal-generator = "alpha_signal_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alpha_signal_generator"]

[tool.hatch.build.targets.sdist]
include = ["src/alpha_signal_generator", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
